--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ li {
   padding-top: 5px;
   text-align: center;
   vertical-align: middle;
-  font-size: 14px;
+  font-size: 12px;
   margin: 0px;
 }
 
@@ -118,5 +118,9 @@ li {
 .forecast-icon {
   position: relative;
   left: -50px;
-  top: 40px;
+  top: 45px;
+}
+.forecast-day-styling {
+  font-size: 18px;
+  font-weight: 900px;
 }
