updated image file names to solve an issue with images

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ li {
   padding: 20px;
   border: 1px solid #dfdfe3;
   border-radius: 5px;
-  background-image: url(/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/weather-app-backround-img.jpg);
+  background-image: url(/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/weather-app-backround-img.JPG);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
