--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,9 @@ h1 {
 li {
   list-style-type: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+li:first-letter {
   text-transform: capitalize;
 }
 
