--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@ strong {
   font-size: 12px;
 }
 
+.current-icon {
+  position: top;
+}
+
 .current-celsius-temp {
   font-size: 16px;
   vertical-align: 20px;
@@ -82,7 +86,7 @@ strong {
 }
 
 .current-conditions {
-  padding-top: 70px;
+  padding-top: 85px;
   padding-left: 50px;
   font-size: 14px;
   color: #424242;
