updated backround image path to fix the problem

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ strong {
   padding: 20px;
   border: 1px solid #dfdfe3;
   border-radius: 5px;
-  background-image: url(/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/app_background.JPG);
+  background-image: url(https://github.com/IlzeRieba/shecodes_vanilla_weather_app/blob/main/files/app_background.JPG);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
