updated icons for the forecast

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ strong {
   padding: 20px;
   border: 1px solid #dfdfe3;
   border-radius: 5px;
-  background-image: url(https://github.com/IlzeRieba/shecodes_vanilla_weather_app/blob/main/files/app_background.JPG);
+  background-image: url(/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/app_background.JPG);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -94,7 +94,7 @@ strong {
 
 .three-day-forecast {
   background-color: white;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
   padding-top: 5px;
   text-align: center;
   vertical-align: middle;
@@ -103,7 +103,7 @@ strong {
 }
 
 .spacing {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 
 .footnote {
@@ -115,7 +115,7 @@ strong {
 .forecast-icon {
   position: relative;
   left: -50px;
-  top: 45px;
+  top: 60px;
 }
 .forecast-day-styling {
   font-size: 18px;
