--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,9 @@ strong {
   background-color: white;
   text-align: center;
   font-size: 12px;
+}
+
+.weather-forecast-details {
   margin-top: -60px;
 }
 
@@ -120,7 +123,7 @@ strong {
 
 .forecast-icon {
   position: relative;
-  left: -10px;
+  left: -20px;
 }
 
 .active {
